--- a/StudentClient/src/studentclient/gui/view/LoginWindow.fxml
+++ b/StudentClient/src/studentclient/gui/view/LoginWindow.fxml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.LoginWindowController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.LoginWindowController">
     <stylesheets>
         <URL value="@/studentclient/gui/view/css/loginwindow.css" />
     </stylesheets>
    <children>
-      <Label layoutX="13.0" layoutY="46.0" text="Username:" textFill="#6c6c6c" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="50.0">
+      <Label layoutX="5.0" layoutY="46.0" text="Username:" textFill="#6c6c6c" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="46.0">
          <font>
             <Font name="Helvetica Neue Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="11.0" layoutY="165.0" text="Password:" textFill="#6c6c6c" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="120.0">
+      <Label layoutX="5.0" layoutY="116.0" text="Password:" textFill="#6c6c6c" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="116.0">
          <font>
             <Font name="Helvetica Neue Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="UsernameField" layoutX="11.0" layoutY="68.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="80.0">
+      <TextField fx:id="UsernameField" layoutX="5.0" layoutY="76.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="76.0">
          <font>
             <Font name="Helvetica Neue" size="18.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="PaswordField" layoutX="10.0" layoutY="186.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="150.0">
+      <PasswordField fx:id="PaswordField" layoutX="5.0" layoutY="146.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="146.0">
          <font>
             <Font name="Helvetica Neue" size="18.0" />
          </font>
@@ -37,11 +39,22 @@
          <font>
             <Font name="Helvetica Neue Bold" size="18.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Label layoutX="12.0" layoutY="13.0" text="EASV UNI-login" textFill="#434343" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
          <font>
             <Font name="Helvetica Neue Bold" size="24.0" />
          </font>
       </Label>
+      <CheckBox layoutX="5.0" layoutY="183.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="114.0" selected="true" text="Remember me" textFill="#6c6c6c">
+         <font>
+            <Font name="Helvetica Neue" size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </CheckBox>
    </children>
 </AnchorPane>
