--- a/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
+++ b/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="594.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
+<AnchorPane id="AnchorPane" prefHeight="630.0" prefWidth="800.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
     <stylesheets>
         <URL value="@/studentclient/gui/view/css/mainwindowviewcss.css" />
     </stylesheets>
@@ -22,7 +22,7 @@
             <Font name="Helvetica Neue Bold" size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lblWeek" layoutX="408.0" layoutY="9.0" text="Week 10" textFill="#54585e" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0">
+      <Label fx:id="lblWeek" layoutX="408.0" layoutY="9.0" prefWidth="145.0" text="Week 10" textFill="#54585e" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0">
          <font>
             <Font name="Helvetica Neue" size="36.0" />
          </font>
@@ -47,10 +47,10 @@
             <Double fx:value="-60.0" />
          </points>
       </Polygon>
-      <GridPane alignment="BASELINE_CENTER" layoutX="1.0" layoutY="356.0" prefHeight="61.0" prefWidth="623.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+      <GridPane alignment="BASELINE_CENTER" layoutX="1.0" layoutY="356.0" prefHeight="61.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.7998352050781" minWidth="10.0" prefWidth="282.7998352050781" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.9508056640625" minWidth="10.0" prefWidth="71.20016479492188" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.15997314453125" minWidth="10.0" prefWidth="268.15997314453125" />
         </columnConstraints>
         <rowConstraints>
