--- a/StudentClient/src/studentclient/gui/view/css/mainwindowviewcss.css
+++ b/StudentClient/src/studentclient/gui/view/css/mainwindowviewcss.css
@@ -5,3 +5,46 @@
 .root {
     -fx-font-family: "Helvetica Neue";
 }
+
+.scroll-pane > .viewport {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane {
+    -fx-background-color: transparent;
+    -fx-border-color: #000000;
+    -fx-border-insets: 0;
+    -fx-border-style: solid inside;
+    -fx-border-radius: 2;
+    -fx-padding: -1 -1 0 0;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical
+{
+    -fx-background-color: #d9d9d9;
+    -fx-background-radius: 2;
+}
+
+.increment-button, .decrement-button
+{
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track
+{
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb
+{
+    -fx-background-color: #ffffff;
+    -fx-background-radius: 2;
+}
+
+.scroll-pane > .corner {
+    -fx-background-color: #ffffff;
+}
