--- a/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
+++ b/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.Double?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -13,66 +12,63 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="630.0" prefWidth="800.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" stylesheets="@css/mainwindowviewcss.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
-   <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Schedule:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font name="Helvetica Neue Bold" size="36.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblWeek" layoutX="408.0" layoutY="9.0" prefWidth="145.0" text="Week 10" textFill="#54585e" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font name="Helvetica Neue" size="36.0" />
-         </font>
-      </Label>
-      <Polygon fill="#3176b5" layoutX="583.0" layoutY="41.0" onMouseReleased="#handleNextWeek" rotate="90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="-25.0" AnchorPane.topAnchor="-25.0">
-        <points>
-          <Double fx:value="-50.0" />
-          <Double fx:value="40.0" />
-          <Double fx:value="50.0" />
-          <Double fx:value="40.0" />
-          <Double fx:value="0.0" />
-          <Double fx:value="-60.0" />
-        </points>
-      </Polygon>
-      <Polygon fill="#3176b5" layoutX="380.0" layoutY="41.0" onMouseReleased="#handlePreviousWeek" rotate="-90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="-25.0">
-         <points>
-            <Double fx:value="-50.0" />
-            <Double fx:value="40.0" />
-            <Double fx:value="50.0" />
-            <Double fx:value="40.0" />
-            <Double fx:value="0.0" />
-            <Double fx:value="-60.0" />
-         </points>
-      </Polygon>
-      <GridPane alignment="BASELINE_CENTER" layoutX="1.0" layoutY="356.0" prefHeight="61.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.7998352050781" minWidth="10.0" prefWidth="282.7998352050781" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.15997314453125" minWidth="10.0" prefWidth="268.15997314453125" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" onAction="#handleAbsenceGraph" prefHeight="47.0" prefWidth="209.0" style="-fx-background-color: #db3b26;" text="Absence graph" textFill="WHITE" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font name="Helvetica Neue Bold" size="24.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#handlePresent" prefHeight="47.0" prefWidth="248.0" style="-fx-background-color: #54ad32;" text="Present" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font name="Helvetica Neue Bold" size="24.0" />
-               </font>
-            </Button>
-         </children>
-      </GridPane>
-      <ScrollPane fitToWidth="true" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0">
-         <content>
-            <AnchorPane fx:id="scheduleAnchor" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="750.0" style="-fx-border-color: black;">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets></AnchorPane>
-         </content>
-      </ScrollPane>
-   </children>
+    <children>
+        <Label layoutX="14.0" layoutY="14.0" text="Schedule:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+            <font>
+                <Font name="Helvetica Neue Bold" size="36.0" />
+            </font>
+        </Label>
+        <Label fx:id="lblWeek" layoutX="408.0" layoutY="9.0" prefWidth="145.0" text="Week 10" textFill="#54585e" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0">
+            <font>
+                <Font name="Helvetica Neue" size="36.0" />
+            </font>
+        </Label>
+        <Polygon fill="#3176b5" layoutX="583.0" layoutY="41.0" onMouseReleased="#handleNextWeek" rotate="90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="-25.0" AnchorPane.topAnchor="-25.0">
+            <points>
+                <Double fx:value="-50.0" />
+                <Double fx:value="40.0" />
+                <Double fx:value="50.0" />
+                <Double fx:value="40.0" />
+                <Double fx:value="0.0" />
+                <Double fx:value="-60.0" />
+            </points>
+        </Polygon>
+        <Polygon fill="#3176b5" layoutX="380.0" layoutY="41.0" onMouseReleased="#handlePreviousWeek" rotate="-90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="-25.0">
+            <points>
+                <Double fx:value="-50.0" />
+                <Double fx:value="40.0" />
+                <Double fx:value="50.0" />
+                <Double fx:value="40.0" />
+                <Double fx:value="0.0" />
+                <Double fx:value="-60.0" />
+            </points>
+        </Polygon>
+        <GridPane alignment="BASELINE_CENTER" layoutX="1.0" layoutY="356.0" prefHeight="61.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.7998352050781" minWidth="10.0" prefWidth="282.7998352050781" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.15997314453125" minWidth="10.0" prefWidth="268.15997314453125" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Button mnemonicParsing="false" onAction="#handleAbsenceGraph" prefHeight="47.0" prefWidth="209.0" style="-fx-background-color: #db3b26;" text="Absence graph" textFill="WHITE" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
+                    <font>
+                        <Font name="Helvetica Neue Bold" size="24.0" />
+                    </font>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#handlePresent" prefHeight="47.0" prefWidth="248.0" style="-fx-background-color: #54ad32;" text="Present" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
+                    <font>
+                        <Font name="Helvetica Neue Bold" size="24.0" />
+                    </font>
+                </Button>
+            </children>
+        </GridPane>
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0">
+            <content>
+                <AnchorPane fx:id="scheduleAnchor" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" />
+            </content>
+        </ScrollPane>
+    </children>
 </AnchorPane>
