--- a/TeacherClient/src/gui/view/MainView.fxml
+++ b/TeacherClient/src/gui/view/MainView.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.MainController">
    <children>
       <Label layoutX="36.0" layoutY="14.0" text="Classes:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="25.0">
          <font>
             <Font size="30.0" />
          </font>
       </Label>
-      <ListView fx:id="listviewClasses" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="71.0" />
+      <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="71.0" />
    </children>
+   <stylesheets>
+        <URL value="@MainCSS.css" />
+    </stylesheets>
 </AnchorPane>
