--- a/StudentClient/src/studentclient/gui/view/LoginWindow.fxml
+++ b/StudentClient/src/studentclient/gui/view/LoginWindow.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -35,13 +34,10 @@
             <Font name="Helvetica Neue" size="18.0" />
          </font>
       </PasswordField>
-      <Button layoutX="153.0" layoutY="270.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="27.0" prefWidth="97.0" style="-fx-background-color: #46a2f8; -fx-text-fill: White;" text="Login" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
+      <Button layoutX="153.0" layoutY="270.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="27.0" prefWidth="97.0" style="-fx-text-fill: White;" text="Login" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
          <font>
             <Font name="Helvetica Neue Bold" size="18.0" />
          </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
       </Button>
       <Label layoutX="12.0" layoutY="13.0" text="EASV UNI-login" textFill="#434343" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
          <font>
@@ -52,9 +48,6 @@
          <font>
             <Font name="Helvetica Neue" size="13.0" />
          </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
       </CheckBox>
    </children>
 </AnchorPane>
