--- a/TeacherClient/src/gui/view/MainCSS.css
+++ b/TeacherClient/src/gui/view/MainCSS.css
@@ -8,10 +8,14 @@ and open the template in the editor.
     Author     : alexl
 */
 
-.table-view:focused {
-  -fx-background-color: -fx-focus-color,-fx-box-border,-fx-control-inner-background;
-  -fx-background-insets: -1.4, 0, 1;
-  -fx-background-radius: 1.4, 0, 0;
-  /*....*/
-  -fx-padding: 1; /* 0.083333em; */
+.button{
+    -fx-background-color: #46a2f8;
+    -fx-font: Helvetica Neue;
+    -fx-font-size: 18px;
+    -fx-text-fill: white;
+    /*-fx-background-radius: 0;*/
+}
+
+.button:pressed{
+    -fx-background-color: magenta;
 }
