--- a/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
+++ b/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="630.0" prefWidth="800.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" stylesheets="@css/mainwindowviewcss.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
+<AnchorPane id="AnchorPane" prefHeight="630.0" prefWidth="800.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" stylesheets="@css/mainwindowviewcss.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.MainWindowViewController">
     <children>
         <Label layoutX="14.0" layoutY="14.0" text="Schedule:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
             <font>
@@ -23,7 +23,7 @@
                 <Font name="Helvetica Neue" size="36.0" />
             </font>
         </Label>
-        <Polygon fill="#3176b5" layoutX="583.0" layoutY="41.0" onMouseReleased="#handleNextWeek" rotate="90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="-25.0" AnchorPane.topAnchor="-25.0">
+        <Polygon id="button" fill="#3176b5" layoutX="583.0" layoutY="41.0" onMouseReleased="#handleNextWeek" rotate="90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="-25.0" AnchorPane.topAnchor="-25.0">
             <points>
                 <Double fx:value="-50.0" />
                 <Double fx:value="40.0" />
@@ -33,7 +33,7 @@
                 <Double fx:value="-60.0" />
             </points>
         </Polygon>
-        <Polygon fill="#3176b5" layoutX="380.0" layoutY="41.0" onMouseReleased="#handlePreviousWeek" rotate="-90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="-25.0">
+        <Polygon id="button" fill="#3176b5" layoutX="380.0" layoutY="41.0" onMouseReleased="#handlePreviousWeek" rotate="-90.0" scaleX="0.4" scaleY="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="-25.0">
             <points>
                 <Double fx:value="-50.0" />
                 <Double fx:value="40.0" />
