--- a/TeacherClient/src/gui/view/LoginWindow.fxml
+++ b/TeacherClient/src/gui/view/LoginWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginWindowController">
+<AnchorPane id="AnchorPane" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginController">
    <children>
       <Label layoutX="13.0" layoutY="46.0" text="Username:" textFill="#6c6c6c" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="50.0">
          <font>
