--- a/TeacherClient/src/teacherclient/gui/view/LoginWindow.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/LoginWindow.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.LoginController">
     <stylesheets>
-        <URL value="@/gui/view/loginwindow.css" />
+        <URL value="@/teacherclient/gui/view/loginwindow.css" />
     </stylesheets>
    <children>
       <Label layoutX="5.0" layoutY="46.0" text="Username:" textFill="#6c6c6c" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="46.0">
