--- a/StudentClient/src/studentclient/gui/view/AbsenceWindow.fxml
+++ b/StudentClient/src/studentclient/gui/view/AbsenceWindow.fxml
@@ -1,27 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.AbsenceWindowController">
+<AnchorPane id="AnchorPane" fx:id="chartPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.AbsenceWindowController">
     <stylesheets>
         <URL value="@/studentclient/gui/view/css/absencewindow.css" />
     </stylesheets>
-   <children>
-      <BarChart fx:id="absenceChart" alternativeRowFillVisible="false" layoutX="86.0" legendVisible="false" verticalGridLinesVisible="false" verticalZeroLineVisible="false" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" tickLabelFill="#434343">
-               <tickLabelFont>
-                  <Font name="Helvetica Neue" size="10.0" />
-               </tickLabelFont></NumberAxis>
-        </yAxis>
-      </BarChart>
-   </children>
 </AnchorPane>
