--- a/TeacherClient/src/teacherclient/gui/view/MainView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/MainView.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.MainController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.MainController">
    <children>
-      <Label layoutX="36.0" layoutY="14.0" text="Classes:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="25.0">
+      <Label layoutX="36.0" layoutY="14.0" text="Classes:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
          <font>
-            <Font size="30.0" />
+            <Font name="Helvetica Neue Bold" size="36.0" />
          </font>
       </Label>
-      <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="71.0" />
+      <ListView fx:id="listviewClasses" focusTraversable="false" layoutX="30.0" layoutY="71.0" prefHeight="300.0" prefWidth="550.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="50.0" />
    </children>
    <stylesheets>
         <URL value="@MainCSS.css" />
