--- a/StudentClient/src/studentclient/gui/view/LoginWindow.fxml
+++ b/StudentClient/src/studentclient/gui/view/LoginWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.LoginWindowController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="230.0" style="-fx-background-color: White;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studentclient.gui.controller.LoginWindowController">
     <stylesheets>
         <URL value="@/studentclient/gui/view/css/loginwindow.css" />
     </stylesheets>
@@ -24,12 +24,12 @@
             <Font name="Helvetica Neue Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="UsernameField" layoutX="5.0" layoutY="76.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="76.0">
+      <TextField fx:id="UsernameField" layoutX="5.0" layoutY="76.0" onAction="#handleLogin" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="76.0">
          <font>
             <Font name="Helvetica Neue" size="18.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="PaswordField" layoutX="5.0" layoutY="146.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="146.0">
+      <PasswordField fx:id="PaswordField" layoutX="5.0" layoutY="146.0" onAction="#handleLogin" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="146.0">
          <font>
             <Font name="Helvetica Neue" size="18.0" />
          </font>
