--- a/TeacherClient/src/teacherclient/gui/view/loginwindow.css
+++ b/TeacherClient/src/teacherclient/gui/view/loginwindow.css
@@ -53,3 +53,14 @@ and open the template in the editor.
 .check-box:selected .box {
 -fx-background-color: #46a2f8;
 }
+
+@font-face {
+    src: url("HelveticaNeue-Bold-02.ttf");
+}
+
+@font-face {
+    src: url("HelveticaNeue-01.ttf");
+}
+
+
+
