--- a/TeacherClient/src/teacherclient/gui/view/MainCSS.css
+++ b/TeacherClient/src/teacherclient/gui/view/MainCSS.css
@@ -3,10 +3,15 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 08-02-2018, 11:19:39
     Author     : alexl
 */
+
+.menu:disabled .label{
+    -fx-text-fill: black;
+    -fx-opacity: 1.0;
+}
 
 .button{
     -fx-background-color: #46a2f8;
