--- a/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
+++ b/StudentClient/src/studentclient/gui/view/MainWindowView.fxml
@@ -15,12 +15,10 @@
     <children>
       <MenuBar fx:id="menuBar" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
+            <Menu fx:id="loginLbl" mnemonicParsing="false" text="Logged in as USER">
+               <items>
               <MenuItem mnemonicParsing="false" onAction="#handleLogOut" text="Log out" />
-            </items>
-          </Menu>
-            <Menu fx:id="loginLbl" disable="true" mnemonicParsing="false" text="Logged in as USER" />
+               </items></Menu>
         </menus>
       </MenuBar>
         <Label layoutX="14.0" layoutY="14.0" text="Abscence:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="25.0">
