--- a/TeacherClient/src/teacherclient/gui/view/MainView.fxml
+++ b/TeacherClient/src/teacherclient/gui/view/MainView.fxml
@@ -9,16 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.MainController">
+<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teacherclient.gui.controller.MainController">
    <children>
       <MenuBar fx:id="menuBar" layoutX="10.0" layoutY="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <menus>
-            <Menu mnemonicParsing="false" text="File">
+            <Menu fx:id="loginLbl" mnemonicParsing="false" text="Logged in as USER">
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#handleLogOut" text="Log out" />
-               </items>
-            </Menu>
-            <Menu fx:id="loginLbl" disable="true" mnemonicParsing="false" text="Logged in as USER" />
+               </items></Menu>
          </menus>
       </MenuBar>
       <Label alignment="TOP_LEFT" layoutX="36.0" layoutY="14.0" text="Classes:" textFill="#54585e" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0">
